Enhances to general functionalities