@@ -9,17 +9,17 @@ import javafx.collections.transformation.FilteredList;
 import javafx.fxml.FXML;
 import javafx.scene.chart.PieChart;
 import javafx.scene.control.*;
+import javafx.scene.paint.Color;
 import javafx.stage.FileChooser;
 
 import java.io.*;
 import java.nio.charset.StandardCharsets;
 import java.time.*;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public final class MainController {
 
-    /* FXML */
     @FXML private TableView<Transaction> table;
     @FXML private TableColumn<Transaction,String> colDate,colType,colCat,colAmount,colDesc;
     @FXML private DatePicker monthPicker;
@@ -29,20 +29,50 @@ public final class MainController {
     @FXML private PieChart pieIncome,pieExpense;
     @FXML private Label lblSaldo;
 
-    /* dati */
     private final TransactionService service = new TransactionService(
             new JsonTransactionDao(new File(System.getProperty("user.home"), ".money-minder.json")));
     private final ObservableList<Transaction> master = FXCollections.observableArrayList();
-    private final FilteredList<Transaction> view = new FilteredList<>(master, t -> true);
+    private final FilteredList<Transaction>  view   = new FilteredList<>(master, t -> true);
 
-    /* init */
+    private static final Map<Category,String> CAT_COLOR = Map.of(
+            Category.STIPENDIO,       "#13e2c0ff",
+            Category.AFFITTO,         "#2196f3",
+            Category.ALIMENTI,        "#ffc107",
+            Category.UTILITA,         "#9c27b0",
+            Category.INTRATTENIMENTO, "#f79400ff",
+            Category.CARBURANTE,      "#795548",
+            Category.ALTRO,           "#607d8b"
+    );
+    private final Map<String,String> incomeColorCache = new HashMap<>();
+
     @FXML
     private void initialize() {
+        /* column bindings */
         colDate  .setCellValueFactory(c->new ReadOnlyStringWrapper(c.getValue().date().toString()));
         colType  .setCellValueFactory(c->new ReadOnlyStringWrapper(c.getValue().type().toString()));
         colCat   .setCellValueFactory(c->new ReadOnlyStringWrapper(c.getValue().category().name()));
         colAmount.setCellValueFactory(c->new ReadOnlyStringWrapper(c.getValue().amount().toString()));
         colDesc  .setCellValueFactory(c->new ReadOnlyStringWrapper(c.getValue().description()));
+
+        /* cell colors (text only) */
+        colType.setCellFactory(tc -> new TableCell<>() {
+            @Override protected void updateItem(String v, boolean empty) {
+                super.updateItem(v, empty);
+                if (empty || v==null) { setText(null); setStyle(""); return; }
+                setText(v);
+                String col = v.equalsIgnoreCase("ENTRATA") ? "#4caf50" : "#e53935";
+                setStyle("-fx-text-fill:"+col+"; -fx-font-weight:bold;");
+            }
+        });
+        colCat.setCellFactory(tc -> new TableCell<>() {
+            @Override protected void updateItem(String v, boolean empty) {
+                super.updateItem(v, empty);
+                if (empty || v==null) { setText(null); setStyle(""); return; }
+                setText(v);
+                String col = CAT_COLOR.getOrDefault(Category.valueOf(v), "#aaaaaa");
+                setStyle("-fx-text-fill:"+col+"; -fx-font-weight:bold;");
+            }
+        });
 
         master.setAll(service.list());
         table.setItems(view);
@@ -59,86 +89,89 @@ public final class MainController {
         applyFilters();
     }
 
-    /* toolbar */
+    /* add / remove */
     @FXML private void onAdd() {
-        TransactionDialog.show().ifPresent(tx -> {
-            master.add(tx);
-            service.add(tx);
-        });
+        TransactionDialog.show().ifPresent(tx -> { master.add(tx); service.add(tx); });
     }
     @FXML private void onRemove() {
         Transaction sel = table.getSelectionModel().getSelectedItem();
-        if (sel == null) return;
-        if (new Alert(Alert.AlertType.CONFIRMATION,"Rimuovere la transazione?").showAndWait()
-                .orElse(ButtonType.CANCEL)==ButtonType.OK) {
-            master.remove(sel);
-            service.replaceAll(master);
+        if (sel==null) return;
+        if (new Alert(Alert.AlertType.CONFIRMATION,"Rimuovere la transazione?")
+                .showAndWait().orElse(ButtonType.CANCEL)==ButtonType.OK) {
+            master.remove(sel); service.replaceAll(master);
         }
     }
 
     /* filtri */
     @FXML public void applyFilters() {
-        String kw = txtSearch.getText()==null ? "" : txtSearch.getText().toLowerCase();
-        Category cat = cbFilterCat.getValue();
-        TxType type  = cbFilterType.getValue();
-        view.setPredicate(t ->
-                (kw.isEmpty() || t.description().toLowerCase().contains(kw)) &&
-                (cat==null || t.category()==cat) &&
-                (type==null|| t.type()==type));
+        String kw = txtSearch.getText()==null?"" : txtSearch.getText().toLowerCase();
+        Category c = cbFilterCat.getValue(); TxType t = cbFilterType.getValue();
+        view.setPredicate(tr ->
+             (kw.isEmpty() || tr.description().toLowerCase().contains(kw)) &&
+             (c==null || tr.category()==c) &&
+             (t==null || tr.type()==t));
         refreshCharts(currentMonth());
     }
 
     /* mese */
-    private YearMonth currentMonth() { return YearMonth.from(monthPicker.getValue()); }
-    @FXML private void onMonthConfirm() { refreshCharts(currentMonth()); }
+    private YearMonth currentMonth(){ return YearMonth.from(monthPicker.getValue()); }
+    @FXML private void onMonthConfirm(){ refreshCharts(currentMonth()); }
 
     /* grafici */
     private void refreshCharts(YearMonth ym) {
-        var listMonth = master.stream()
-                .filter(t -> YearMonth.from(t.date()).equals(ym))
-                .collect(Collectors.toList());
+        List<Transaction> month = master.stream()
+                .filter(t -> YearMonth.from(t.date()).equals(ym)).toList();
 
-        Money incomeSum = listMonth.stream()
-                .filter(t -> t.type()==TxType.ENTRATA)
+        Money totIn = month.stream().filter(t->t.type()==TxType.ENTRATA)
                 .map(Transaction::amount).reduce(Money.ZERO, Money::add);
-        Money expenseSum = listMonth.stream()
-                .filter(t -> t.type()==TxType.USCITA)
+        Money totOut= month.stream().filter(t->t.type()==TxType.USCITA)
                 .map(Transaction::amount).reduce(Money.ZERO, Money::add);
 
-        /* entrate per descrizione */
-        Map<String,Money> byDescr = listMonth.stream()
-                .filter(t -> t.type()==TxType.ENTRATA)
+        Map<String,Money> inMap = month.stream().filter(t->t.type()==TxType.ENTRATA)
                 .collect(Collectors.groupingBy(Transaction::description,
                         Collectors.reducing(Money.ZERO, Transaction::amount, Money::add)));
         ObservableList<PieChart.Data> inData = FXCollections.observableArrayList();
-        byDescr.forEach((d,v)->inData.add(new PieChart.Data(d+" "+v,v.value().doubleValue())));
-        pieIncome.setData(inData);
-        pieIncome.setLegendVisible(false);
+        inMap.forEach((d,v)->inData.add(new PieChart.Data(d+" "+v,v.value().doubleValue())));
+        pieIncome.setData(inData); pieIncome.setLegendVisible(false);
+        colorSlices(inData, d->incomeColor(d.getName()));
 
-        /* uscite per categoria */
-        Map<Category,Money> byCat = listMonth.stream()
-                .filter(t -> t.type()==TxType.USCITA)
+        Map<Category,Money> outMap = month.stream().filter(t->t.type()==TxType.USCITA)
                 .collect(Collectors.groupingBy(Transaction::category,
                         Collectors.reducing(Money.ZERO, Transaction::amount, Money::add)));
         ObservableList<PieChart.Data> outData = FXCollections.observableArrayList();
-        byCat.forEach((c,v)->outData.add(new PieChart.Data(c.name()+" "+v,v.value().doubleValue())));
-        pieExpense.setData(outData);
-        pieExpense.setLegendVisible(false);
+        outMap.forEach((cat,v)->outData.add(new PieChart.Data(cat.name()+" "+v,v.value().doubleValue())));
+        pieExpense.setData(outData); pieExpense.setLegendVisible(false);
+        colorSlices(outData, d->{
+            String k=d.getName().split(" ")[0];
+            return CAT_COLOR.getOrDefault(Category.valueOf(k),"#aaaaaa");
+        });
 
-        lblSaldo.setText("Saldo: " + incomeSum.subtract(expenseSum));
+        lblSaldo.setText("Saldo: " + totIn.subtract(totOut));
+    }
+    private void colorSlices(ObservableList<PieChart.Data> data,
+                             java.util.function.Function<PieChart.Data,String> fn){
+        data.forEach(d->d.getNode().setStyle("-fx-pie-color:"+fn.apply(d)+";"));
+    }
+    private String incomeColor(String key){
+        return incomeColorCache.computeIfAbsent(key,k->{
+            int h=Math.abs(k.hashCode()); double sat=0.35+(h%50)/100.0;
+            Color c=Color.hsb(120,sat,0.82);
+            return String.format("#%02x%02x%02x",
+                    (int)(c.getRed()*255),(int)(c.getGreen()*255),(int)(c.getBlue()*255));
+        });
     }
 
-    /* export CSV */
-    @FXML private void onExport() {
-        FileChooser fc = new FileChooser();
+    /* export */
+    @FXML private void onExport(){
+        FileChooser fc=new FileChooser();
         fc.setInitialFileName("money-"+currentMonth()+".csv");
-        File f = fc.showSaveDialog(table.getScene().getWindow());
-        if (f==null) return;
-        try (PrintWriter pw = new PrintWriter(f, StandardCharsets.UTF_8)) {
+        File f=fc.showSaveDialog(table.getScene().getWindow());
+        if(f==null) return;
+        try(PrintWriter pw=new PrintWriter(f, StandardCharsets.UTF_8)){
             pw.println("data,tipo,categoria,importo,descrizione");
-            view.forEach(t -> pw.printf("%s,%s,%s,%s,%s%n",
+            view.forEach(t->pw.printf("%s,%s,%s,%s,%s%n",
                     t.date(),t.type(),t.category(),t.amount(),t.description()));
-        } catch (IOException e) {
+        }catch(IOException e){
             new Alert(Alert.AlertType.ERROR,"Errore salvataggio CSV").showAndWait();
         }
     }
